Added codes to MainActivity.java for API data Added Glide and other codes to MainActRCVAdapter.java for API data Added Glide in FullScreenImageViewActivity.java Added Internet permission in Manifest Removed Action Bar from FullScreenImageViewActivity.java in Manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:theme="@style/Theme.Gallery">
         <activity
             android:name=".FullScreenImageViewActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
